...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Select Tags-->
        <scene sceneID="ZbE-vK-xsN">
            <objects>
                <tableViewController id="zuZ-hQ-X2d" customClass="TagSelectTableViewController" customModule="fussyspider" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="MGV-ay-wNm" userLabel="tag list">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                        <color key="tintColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                        <color key="sectionIndexColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
...
                        <viewControllerLayoutGuide type="bottom" id="T73-uj-iZv"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="0Ee-ax-qfb">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ua2-GO-nG2" userLabel="Tag Name Field">
                                <rect key="frame" x="92" y="72" width="488" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="Tag Name Field"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AL6-Hl-sgE">
                                <rect key="frame" x="92" y="116" width="488" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="Location Field">
                                    <accessibilityTraits key="traits" searchField="YES"/>
                                </accessibility>
                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="locationFieldReturn:" destination="ccu-pQ-oAI" eventType="editingDidEndOnExit" id="85r-b5-rzx"/>
...
                            <constraint firstItem="mV9-ZU-e0W" firstAttribute="top" secondItem="jV6-X2-b1V" secondAttribute="bottom" constant="17" id="sRe-Ig-f0O"/>
                            <constraint firstItem="4zA-vn-1Ro" firstAttribute="top" secondItem="zO9-ms-D7F" secondAttribute="bottom" constant="21" id="tLd-Fj-jfm"/>
                            <constraint firstItem="Hlf-JS-1Rr" firstAttribute="leading" secondItem="0Ee-ax-qfb" secondAttribute="leadingMargin" id="ulR-vY-CBO"/>
                            <constraint firstItem="4zA-vn-1Ro" firstAttribute="leading" secondItem="0Ee-ax-qfb" secondAttribute="leadingMargin" id="zdX-eQ-XR1"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Edit Tag" id="5ZF-Er-afi">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="dyk-QS-pzr">
                            <color key="tintColor" red="0.50461647730000003" green="0.0" blue="0.47217712169999998" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="rUW-Fm-Mt6" kind="show" id="HWn-mA-S5f"/>
                            </connections>
                        </barButtonItem>
...
