...
          coordinate: tagCoordinate,
          type: tagType,
          radius: tagRadius))
        tagStore.saveAllTags()
      }
      else {
        let alert = FSAlertController(title: "Warning", message: "No tag name entered.", preferredStyle: UIAlertControllerStyle.Alert)
        self.presentViewController(alert, animated: true, completion: nil)
      }
    }
    if let presenting = self.presentingViewController {
      presenting.dismissViewControllerAnimated(true, completion: nil)
    }
...
