<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8187.4" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="C7m-wI-cgr">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8151.3"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Edit Task-->
        <scene sceneID="4YO-M7-qf0">
            <objects>
                <viewController id="jJE-JF-2d3" customClass="TaskEditViewController" customModule="fussyspider" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Qg3-PM-eIK"/>
                        <viewControllerLayoutGuide type="bottom" id="EBD-Ee-ksh"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="Uel-JL-aQ1">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1wH-Fl-mfe">
                                <rect key="frame" x="120" y="72" width="460" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="Task Name Field"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dfy-n8-cca">
                                <rect key="frame" x="20" y="76" width="92" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EUZ-vm-T39">
                                <rect key="frame" x="20" y="110" width="92" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="edx-JS-fXd">
                                <rect key="frame" x="120" y="110" width="460" height="65"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <accessibility key="accessibilityConfiguration" label="Notes Field"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reminder" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X6Q-SG-waX">
                                <rect key="frame" x="20" y="187" width="92" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MCc-Ev-3vn">
                                <rect key="frame" x="120" y="183" width="460" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="Reminder Picker"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="editReminderDate:" destination="jJE-JF-2d3" eventType="editingDidBegin" id="LxZ-Lc-RoQ"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jep-em-rkm">
                                <rect key="frame" x="120" y="221" width="460" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="Hidden Picker"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="editReminderHidden:" destination="jJE-JF-2d3" eventType="editingDidBegin" id="ElL-5A-Hyo"/>
                                </connections>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hidden until" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSV-51-b1g">
                                <rect key="frame" x="20" y="225" width="92" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="X6Q-SG-waX" firstAttribute="centerY" secondItem="MCc-Ev-3vn" secondAttribute="centerY" id="1BD-HG-odk"/>
                            <constraint firstItem="MCc-Ev-3vn" firstAttribute="leading" secondItem="jep-em-rkm" secondAttribute="leading" id="2T3-El-wSl"/>
                            <constraint firstItem="Dfy-n8-cca" firstAttribute="centerY" secondItem="1wH-Fl-mfe" secondAttribute="centerY" id="7YG-88-SnN"/>
                            <constraint firstItem="wSV-51-b1g" firstAttribute="leading" secondItem="Uel-JL-aQ1" secondAttribute="leadingMargin" id="9J6-N5-m19"/>
                            <constraint firstItem="X6Q-SG-waX" firstAttribute="top" secondItem="EUZ-vm-T39" secondAttribute="bottom" constant="56" id="CaU-2C-h5u"/>
                            <constraint firstItem="EUZ-vm-T39" firstAttribute="top" secondItem="edx-JS-fXd" secondAttribute="top" id="D8V-iP-r5I"/>
                            <constraint firstItem="wSV-51-b1g" firstAttribute="leading" secondItem="X6Q-SG-waX" secondAttribute="leading" id="DAv-Nd-D3l"/>
                            <constraint firstItem="jep-em-rkm" firstAttribute="trailing" secondItem="MCc-Ev-3vn" secondAttribute="trailing" id="HGd-Xl-rO1"/>
                            <constraint firstItem="MCc-Ev-3vn" firstAttribute="trailing" secondItem="edx-JS-fXd" secondAttribute="trailing" id="Itv-K9-51I"/>
                            <constraint firstItem="jep-em-rkm" firstAttribute="top" secondItem="MCc-Ev-3vn" secondAttribute="bottom" constant="8" symbolic="YES" id="QaB-xf-Bra"/>
                            <constraint firstItem="EUZ-vm-T39" firstAttribute="leading" secondItem="X6Q-SG-waX" secondAttribute="leading" id="Qkf-sF-wIm"/>
                            <constraint firstItem="jep-em-rkm" firstAttribute="leading" secondItem="wSV-51-b1g" secondAttribute="trailing" constant="8" symbolic="YES" id="UD0-Ua-hct"/>
                            <constraint firstItem="jep-em-rkm" firstAttribute="trailing" secondItem="Uel-JL-aQ1" secondAttribute="trailingMargin" id="VGg-bl-rTc"/>
                            <constraint firstItem="jep-em-rkm" firstAttribute="centerY" secondItem="wSV-51-b1g" secondAttribute="centerY" id="e4i-UL-OUa"/>
                            <constraint firstItem="edx-JS-fXd" firstAttribute="top" secondItem="1wH-Fl-mfe" secondAttribute="bottom" constant="8" symbolic="YES" id="f5C-xZ-ZRV"/>
                            <constraint firstItem="edx-JS-fXd" firstAttribute="trailing" secondItem="1wH-Fl-mfe" secondAttribute="trailing" id="gEB-pT-HAa"/>
                            <constraint firstItem="EUZ-vm-T39" firstAttribute="leading" secondItem="Dfy-n8-cca" secondAttribute="leading" id="h6R-hN-7zr"/>
                            <constraint firstItem="edx-JS-fXd" firstAttribute="leading" secondItem="1wH-Fl-mfe" secondAttribute="leading" id="kjZ-GY-oFX"/>
                            <constraint firstItem="edx-JS-fXd" firstAttribute="leading" secondItem="EUZ-vm-T39" secondAttribute="trailing" constant="8" symbolic="YES" id="kwB-mw-xWV"/>
                            <constraint firstItem="edx-JS-fXd" firstAttribute="leading" secondItem="MCc-Ev-3vn" secondAttribute="leading" id="lyl-HX-gEE"/>
                            <constraint firstItem="MCc-Ev-3vn" firstAttribute="leading" secondItem="X6Q-SG-waX" secondAttribute="trailing" constant="8" symbolic="YES" id="ok6-we-V0q"/>
                            <constraint firstItem="1wH-Fl-mfe" firstAttribute="top" secondItem="Qg3-PM-eIK" secondAttribute="bottom" constant="8" symbolic="YES" id="rZu-zM-wkJ"/>
                            <constraint firstItem="MCc-Ev-3vn" firstAttribute="top" secondItem="edx-JS-fXd" secondAttribute="bottom" constant="8" symbolic="YES" id="xfv-BW-Hgb"/>
                            <constraint firstItem="1wH-Fl-mfe" firstAttribute="leading" secondItem="Dfy-n8-cca" secondAttribute="trailing" constant="8" symbolic="YES" id="zSK-WF-JXj"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Edit Task" id="c6n-Jp-WCy">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="lH7-zp-4ag">
                            <color key="tintColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="ig4-eX-xGm" kind="show" id="Mm1-WC-jnf"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" tag="1" systemItem="save" id="HQP-Ig-UaL">
                            <color key="tintColor" red="0.29172585229999998" green="0.0" blue="0.25832373990000002" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="saveReminder:" destination="jJE-JF-2d3" id="gav-3Y-VoK"/>
                                <segue destination="ig4-eX-xGm" kind="show" id="Qhy-44-iEE"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="reminderDate" destination="MCc-Ev-3vn" id="N1X-od-KgC"/>
                        <outlet property="reminderHidden" destination="jep-em-rkm" id="h8U-eT-Xrv"/>
                        <outlet property="reminderName" destination="1wH-Fl-mfe" id="eZh-nw-fHl"/>
                        <outlet property="reminderNotes" destination="edx-JS-fXd" id="GTZ-fY-lix"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BFm-Ea-Kz7" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1250" y="261"/>
        </scene>
        <!--Main-->
        <scene sceneID="OaQ-Rg-9j5">
            <objects>
                <viewControllerPlaceholder storyboardName="Main" id="ig4-eX-xGm" sceneMemberID="viewController"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="E0D-ib-lMH" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1250" y="1032"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="rMY-GJ-rzi">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="C7m-wI-cgr" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JfL-Dk-XaZ">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="jJE-JF-2d3" kind="relationship" relationship="rootViewController" id="66T-CD-eps"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="poQ-Xx-U5X" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="534" y="261"/>
        </scene>
    </scenes>
    <inferredMetricsTieBreakers>
        <segue reference="Qhy-44-iEE"/>
    </inferredMetricsTieBreakers>
</document>
